Nuevo proyecto agregado y mejora en css

--- a/about.html
+++ b/about.html
@@ -36,15 +36,14 @@
     </header>
 
     <div class="container-about">
-        <div class="img-container">
-            <img src="./img/imag-about1.png" alt="Foto de Sara" class="imgRedonda"> 
-        </div>
+        <img src="./img/imag-about2.png" alt="Foto de Sara" class="imgRedonda"> 
         <div class="info-container">
             <h3 class="about-title"> <span>¡HOLA! MI NOMBRE ES</span> SARA PALACIO</h3> <br> 
             <p>Una ingeniera civil de profesión en formación como desarrolladora web, con interés en el frontend. Tengo experiencia en la implementación de metologías ágiles para el trabajo en equipo para el sector construcción y siento gran pasión por enfrentarme a retos que me lleven a pensar en soluciones novedosas 
-            y que me permitan implementar lo aprendido a lo largo de mi formación académica.</p> <br>
+            y que me permitan implementar lo aprendido a lo largo de mi formación académica.</p>
             <p>Actualmente estoy cursando en Digital House el programa de Certified Tech Developer y en Academia Geek el programa de Front End con énfasis en ReactJS a la vez que hago avances en mi formación autodidacta
             </p>
+            <p>Más de mi formación puede ser consultada en mi CV. </p> <a>Ver CV aquí</a>
         </div>
     </div>
 
