--- a/contacto.html
+++ b/contacto.html
@@ -49,6 +49,7 @@
                 <label for="mensaje">Déjame tu mensaje:</label>
                 <textarea id="mensaje"></textarea>
             </fieldset>
+        </form>
   
     <p>O contáctame a través de las redes sociales</p>
         <div class="social-media">
