--- a/proyectos.html
+++ b/proyectos.html
@@ -35,6 +35,32 @@
     <section>
         <h2>Proyectos Construidos</h2>
         <div class="contenedor-proyectos">
+
+            <div class="proyecto">
+                <img class="img-proyecto" loading="lazy" srcset="./img/img-proyecto0.png" alt="proyecto0">
+
+                <div class="contenido-proyecto">
+                    <h3>Proyecto terminado</h3>
+                    <a href="https://github.com/sarapalac10/Reto2-Sprint1"><p>Calculadora</p></a>
+                    
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <ion-icon name="logo-html5"></ion-icon>
+                        </li>
+                        <li>
+                            <ion-icon name="logo-css3"></ion-icon>
+                        </li>
+                        <li>
+                            <ion-icon name="logo-nodejs"></ion-icon>
+                        </li>
+                    </ul>
+                    <a href="https://sarapalac10.github.io/Reto2-Sprint1/" class="boton-proyecto">
+                        Ver Proyecto
+                    </a>
+                </div>
+            </div> <!--Cierre de div proyecto 0-->
+
+
             <div class="proyecto">
                 <img class="img-proyecto" loading="lazy" srcset="./img/img-proyecto1.png" alt="proyecto1">
 
