Actualización en about

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                     <nav class="navegacion">
                         <a href="./about.html">About</a>
                         <a href="./proyectos.html">Work</a>
-                        <a href="./contacto.html">Contact</a>
+                        <!-- <a href="./contacto.html">Contact</a> -->
                     </nav>
                 </div>  
 
@@ -43,7 +43,13 @@
             y que me permitan implementar lo aprendido a lo largo de mi formación académica.</p>
             <p>Actualmente estoy cursando en Digital House el programa de Certified Tech Developer y en Academia Geek el programa de Front End con énfasis en ReactJS a la vez que hago avances en mi formación autodidacta
             </p>
-            <p>Más de mi formación puede ser consultada en mi CV. </p> <a>Ver CV aquí</a>
+            <p>Más de mi formación puede ser consultada en mi CV. </p> <a>https://drive.google.com/file/d/1rcoNYW5HFcQTgO5Xt0NfPHvRNT1IWD5r/view?usp=sharing</a>
+        </div>
+
+        <p>Puedes contactarme a través de las redes sociales</p>
+        <div class="social-media">
+            <a href="https://github.com/sarapalac10"> <ion-icon name="logo-github"></ion-icon> </a>
+            <a href="https://www.linkedin.com/in/sara-palacio-01/"><ion-icon name="logo-linkedin"></ion-icon></a>
         </div>
     </div>
 
