--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header inicio">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <a href="index.html">
+                <a href="./index.html">
                     <h2 class="header-title">SARA PZ</h2>
                 </a>
 
@@ -25,7 +25,7 @@
                     <nav class="navegacion">
                         <a href="about.html">About</a>
                         <a href="proyectos.html">Work</a>
-                        <a href="contacto.html">Contact</a>
+                        <!-- <a href="contacto.html">Contact</a> -->
                     </nav>
                 </div>  
 
