Actualización en about y enlace a cv

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             y que me permitan implementar lo aprendido a lo largo de mi formación académica.</p>
             <p>Actualmente estoy cursando en Digital House el programa de Certified Tech Developer y en Academia Geek el programa de Front End con énfasis en ReactJS a la vez que hago avances en mi formación autodidacta
             </p>
-            <p>Más de mi formación puede ser consultada en mi </p> <a href="https://drive.google.com/file/d/1rcoNYW5HFcQTgO5Xt0NfPHvRNT1IWD5r/view?usp=sharing">CV</a>
+            <p>Más de mi formación puede ser consultada en mi CV </p> <a href="https://drive.google.com/file/d/1rcoNYW5HFcQTgO5Xt0NfPHvRNT1IWD5r/view?usp=sharing">Visita mi CV</a>
         </div>
 
         <p>Puedes contactarme a través de las redes sociales</p>
